--- a/AplicativoMejorado/appsettings.json
+++ b/AplicativoMejorado/appsettings.json
@@ -6,8 +6,12 @@
         }
     },
     "AllowedHosts": "*",
+    //"ConnectionStrings": {
+    //    "cn": "Server=GABRIELVIVANCO\\SQLEXPRESS;Database=HospitalDB;User ID=sa;Password=010203;TrustServerCertificate=True"
+    //},
+
     "ConnectionStrings": {
-        "cn": "Server=DESKTOP-84C6UEA;Database=HospitalDB;User ID=sa;Password=20042008d;TrustServerCertificate=True"
+      "cn": "workstation id=HospitalDBGabrielVivanco.mssql.somee.com;packet size=4096;user id=GaboVivanco04_SQLLogin_1;pwd=qq48ysizn5;data source=HospitalDBGabrielVivanco.mssql.somee.com;persist security info=False;initial catalog=HospitalDBGabrielVivanco;TrustServerCertificate=True"
     }
 
 }
